# sigma-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/src/: main.cpp
engine/: CMakeLists.txt  compile-shaders.bat
engine/materials/: solidColor.mat  texture.mat
engine/shaders/: phong.frag  phong.glsl  phong.vert  shader.frag  shader.vert  texture.frag  texture.vert
engine/src/: Application.cpp  Application.h  FileUtil.cpp  FileUtil.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Window.cpp  Window.h  base.h  main.cpp
engine/src/ecs/: Registry.cpp  Registry.h
engine/src/event/: Event.h  KeyEvent.h
engine/src/renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
engine/src/vulkan/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  FrameGroup.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Util.cpp  Util.h
